v4.15
- heavily simplified the screen scrolling pipes to have fewer freeram addresses reserved
- changed pipe freeram to be one that clears on return to overworld
- added pipe tile that clears held item
- added blocks that control camera scroll or movement
- added Dragon Coin Save asm by request
- clean up of the documentation

v4.14
- added pballoon removal to powerup filter block
- moved some uberasm object things to gamemode
- updated PlayerXSpeedFix with a new option flag
- better organized the demo text
- fixed up gps list

v4.13
- new custom user toolbar buttons
- updated to Lunar Helper + Monitor 4.0.1
- updated some ExGraphics and map16
- Updated the basic text to be outlined
- adjusted some sprite remaps
- added a basic teleport block

v4.12
- new uberasm objects system; cleaned up level asm
- return of the grey double bounce shell (but no more messed up koopas)
- more extra-bit sprite enhancements; chucks remember behaviour, exit-enabled grow pipe, squished rex
- tweaked some global exanimations
- added spike top ceiling cling patch
- dropped the ram controlled fireballs feature
- moved global line guide map16 tiles
- updated retry to 0.4.3
- updated Lunar Helper to 3.0.0

v4.11
- new death block graphics, using the SMM2 spikes
- removed mega mole tweak
- tidier backup process and updates to backup script
- cleaner, less idiosyncratic baserom layout (return of normal list files)
- updated Lunar Helper to 2.4.0, Lunar Magic to 3.33 and Lunar Monitor to 1.4.0
- updated retry to 0.3.10
- dropped Human Readable Map16 from tools
- documentation updates

v4.10
- new on/off blocks and block graphics
- added TheBourgyMan's swooper and spiny blocks
- updated the pirahna plant patch & added demo level for it
- updated documentation
- added Optimize 1F0 patch
- update retry to 0.3.7

v4.9
- tool updates: UberASMTool 1.5, LunarHelper 2.1.1, Lunar Monitor 1.2.3
- reorganization of patches
- updates to build scripts
- updates retry to 0.3.5

v4.8.1