@@ -1,4 +1,3 @@
-
 db $42
 JMP Mario : JMP Mario : JMP Mario : JMP End : JMP End : JMP End : JMP End
 JMP End : JMP End : JMP End
