@@ -3,6 +3,7 @@ v4.15
 - changed pipe freeram to be one that clears on return to overworld
 - added pipe tile that clears held item
 - added blocks that control camera scroll or movement
+- added single-use bounce block
 - added Dragon Coin Save asm by request
 - clean up of the documentation
 
